--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,7 @@
                 
                 <div class="section-content">
                     <div class="image-content">
-                        <img src="5.jpg" alt="Impacto Ambiental">
+                        <img src="5.jpg" alt="Impacto ,Ambiental">
                     </div>
                     <div class="text-content">
                         <p>El trazado propuesto bordea el río Rímac, lo que introduce riesgos e impactos importantes para la sostenibilidad del proyecto:</p>
